# yoktez-mcp

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.en.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-yoktez-mcp-build.md  2026-06-18-faz5-quality-moat.md
packaging/hf/: Dockerfile  README.md
scripts/: __init__.py  build_facets.py  build_index.py
src/yoktez_mcp/: cache.py  citations.py  coverage.py  detail.py  facets.py  http.py  index.py  models.py  pdf.py  prompts.py  relevance.py  search.py  server.py  text.py
src/yoktez_mcp/data/: facets.json
tests/: conftest.py  test_build_index.py  test_cache.py  test_citations.py  test_coverage.py  test_detail.py  test_facets.py  test_http.py  test_index.py  test_live_e2e.py  test_models.py  test_pdf.py  test_prompts.py  test_relevance.py  test_search.py  test_server.py  test_text.py
tests/fixtures/derived/: abd_sample.html  results_empty.html  results_islem4.html
tests/fixtures/faz0/: FINDINGS.md  error_gecersiz_sorgulama.html  error_hata_olustu.html  getTezPdf_card0.html  getUniversities_TR.html  islem2_attempt_hata_olustu.html  islem4_control_302_headers.txt  tarama.html  tezBilgiDetay.json  tezBilgiDetay_izinsiz.json
tests/fixtures/probe/: README.md  t1a_advisor_contains_TitleCase.html  t1f_all_contains.html  t2_all_split_and_slots.html  t2_all_yapayzeka_ceza.html  t2_all_yapayzeka_hukuk.html  t2b_slot_yz_AND_cezahukuku.html  t2b_slot_yz_AND_hukuk.html  t3_all_yapayzeka_tip.html  t4c_islem2_author_AdSoyad.html
